--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -56,7 +56,7 @@ header, section{
 .net-design-2{
   top: -81px;
   right: 38px;
-  /*z-index: 0;*/
+  z-index: 0;
 }
 
 .custom-link{
@@ -108,7 +108,22 @@ header, section{
   padding:8px 10px;
 }
 
+.custom-btn__3{
+  border-radius: 10px;
+  padding: 8px 30px;
+  border: 1.7px solid #ffff;
+  background-color: transparent;
+  color: #ffff;
+  text-decoration: none;
+  font-size: 1.2em;
+}
+.custom-btn__3:hover{
+  text-decoration: none;
+  background: #024fbb;
+  color: #ffff;
+  border: 2px solid #b3c2fc;
 
+}
 .parent__custom-container{
   padding:  0 8em
 }
@@ -147,7 +162,16 @@ header, section{
   display: flex;
   flex-direction: column;
   width: 40%
- 
+  /*padding: 20px;
+  margin: 20px;
+  width: 143px;
+  height: 143px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #eaefee;
+  border-radius: 10px;
+  box-shadow: 1px 1px 8px grey;*/
 }
 
 .sub-item{
@@ -181,18 +205,14 @@ header, section{
 }
 
 @media only screen and (max-width: 767px) {
-  
-  .parent__custom-container{
-    padding:  0
+  .banner h2{
+    font-size: 20px;
+    text-align: center;
   }
-
-
-  .footer-mobile{
-    flex-direction: column;
-  }
-
-  .footer-link {
-    width: 100%
+  .banner p{
+    font-size: 14px;
+    text-align: center;
+    margin-top: 10px;
   }
 
   .logo{
@@ -202,6 +222,14 @@ header, section{
     margin-top: 30px;
   }
 
+  .mobile-form h6{
+    text-align: center;
+    font-size: 14px;
+  }
+
+  .custom-input{
+    font-size: 10px;
+  }
 
   .custom-btn__2{
     font-size: 10px;
@@ -233,13 +261,33 @@ header, section{
     margin-bottom: 10px;
   }
 
-  .custom-container{
-    background-color: #ffff;
-    box-shadow: 1px 2px 50px #dedee0;
-    /*padding: 20px 0;*/
+  .how-container img{
+    width: 10%;
+  }
+  .how-container h4{
+    font-size: 14px;
+    padding: 0px 3em
+  }
+  .how-container p{
+    font-size: 10px;
+    padding: 0px 3em
   }
 
- 
+  .how-heading h6{
+    font-size: 10px;
+  }
+
+  .how-heading h3{
+    font-size: 16px;
+  }
+
+  .contact h5{
+    font-size: 10px;
+  }
+
+  .contact h2{
+    font-size: 16px;
+  }
 }
 
 @media only screen and (max-width: 768px) and (min-width: 575.98px)  {
@@ -294,10 +342,80 @@ header, section{
     margin-bottom: 10px;
   }
 
-  .custom-container{
-    background-color: #ffff;
-    box-shadow: 1px 2px 50px #dedee0;
-    /*padding: 20px 0;*/
+  .how-container img{
+    width: 30%;
+  }
+  .how-container h4{
+    font-size: 16px;
+    padding: 0px 3em
+  }
+  .how-container p{
+    font-size: 12px;
+    padding: 0px 3em
+  }
+
+  .how-heading h6{
+    font-size: 12px;
+  }
+
+  .how-heading h3{
+    font-size: 18px;
+  }
+
+
+  .flip-1{
+    position: absolute;
+    left: 32%!important;
+    top: 21.2em!important;
+  }
+  .flip-1 img{
+    width: 80%;
+  }
+
+  .flip-2{
+    position: absolute;
+    left: 27%!important;
+    top: 45.2em!important;
+  }
+  .flip-2 img{
+    width: 80%;
+  }
+
+  .flip-3{
+    position: absolute;
+    left: 28%!important;
+    top: 70em!important;
+  }
+
+  .flip-3 img{
+    width: 80%;
+  }
+
+  .flip-4{
+    position: absolute;
+    left: 28%!important;
+    top: 95em!important;
+  }
+
+  .flip-4 img{
+    width: 80%;
+  }
+
+  .flip-5{
+    position: absolute;
+    left: 29%!important;
+    top: 118em!important;
+  }
+  .flip-5 img{
+    width: 80%;
+  }
+
+  .contact h5{
+    font-size: 12px;
+  }
+
+  .contact h2{
+    font-size: 18px;
   }
   
 }
